# TerminalTyper

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Makefile  README.md  generator.cpp  generator.h  main.cpp  run.sh  typer.cpp  typer.h
src/: CMakeLists.txt  generator.cpp  generator.h  logger.cpp  logger.h  typer.cpp  typer.h
texts/: pangram2.txt  pangram3.txt  text.txt  word_series.txt
